fix for double scroll bar appearing on the right at certain zoom levels

--- a/src/client/css/style.css
+++ b/src/client/css/style.css
@@ -66,7 +66,7 @@ div.plugins {
 
 #content{
     min-width: 1200px;
-    overflow-y: scroll;
+/*    overflow-y: scroll;*/
     width: 100%;
     height: 100% !important;
     position: relative;
